sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Link__c.field-meta.xml
<CustomField>
    <fullName>Account_Link__c</fullName>
    <description>LEM-1695: It stores link to associated Account. It is used for embedding Account Name with link in email templates.</description>
    <formula>HYPERLINK(LEFT($Api.Enterprise_Server_URL_540, FIND($CustomMetadata.Static_Configurations__mdt.Enterprise_Server_URL_Search_Key.Configuration_Value__c, $Api.Enterprise_Server_URL_540, 0) - 1) + AccountId, Account.Name)</formula>
    <label>Account</label>
    <type>Text</type>
</CustomField>