sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner__c</fullName>
    <description>LEM-813: Account owner linked to the onboarding event.</description>
    <formula>HYPERLINK(Account.OwnerId, Account.Owner.FirstName + &apos; &apos; + Account.Owner.LastName)</formula>
    <inlineHelpText>Account owner linked to the onboarding event</inlineHelpText>
    <label>Account Owner</label>
    <type>Text</type>
</CustomField>