sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Owner_Email_Calculated__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_Calculated__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-746: It is used to populate Account_Owner_Email_Id field without querying on Account.</description>
    <formula>Account.Owner.Email</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Account Owner Email Calculated</label>
    <type>Text</type>
</CustomField>