sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Owner_Email_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Email_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-746: It stores email address of Account Owner for sending email alerts.</description>
    <label>Account Owner Email Id</label>
    <type>Email</type>
</CustomField>