sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>LEM-1240: It is used to display Account Owner name on Email Templates.</description>
    <formula>Account.Owner.FirstName + &apos; &apos; + Account.Owner.LastName</formula>
    <formulaTreatBlanksAs>BlankAsBlank</formulaTreatBlanksAs>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>