sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Record_Type_Name__c</fullName>
    <formula>Account.RecordType.DeveloperName</formula>
    <inlineHelpText>LEM-658: It indicates name of Account record type.</inlineHelpText>
    <label>Account Record Type Name</label>
    <type>Text</type>
</CustomField>