sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Reference__c.field-meta.xml
<CustomField>
    <fullName>Account_Reference__c</fullName>
    <label>Account Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>