sfdx-source/force-app/main/default/objects/WorkOrder/fields/Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Type__c</fullName>
    <description>LEM-2844: It indicates the type of the associated Account.</description>
    <formula>Text(Account.Type)</formula>
    <label>Account Type</label>
    <type>Text</type>
</CustomField>