sfdx-source/force-app/main/default/objects/WorkOrder/fields/Activated_Centrally_AC__c.field-meta.xml
<CustomField>
    <fullName>Activated_Centrally_AC__c</fullName>
    <description>LEM-813: Indicates if the stores are activated by the activation team.</description>
    <inlineHelpText>Indicates if the stores are activated by the activation team</inlineHelpText>
    <label>Activated Centrally (AC)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>