sfdx-source/force-app/main/default/objects/WorkOrder/fields/Actual_Number_Of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Actual_Number_Of_Stores__c</fullName>
    <description>LEM-813: Actual number of stores being onboarded as part of this work order.</description>
    <inlineHelpText>Actual number of stores being onboarded as part of this work order</inlineHelpText>
    <label>Actual Number Of Stores</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>