sfdx-source/force-app/main/default/objects/WorkOrder/fields/Assigned_From_Group__c.field-meta.xml
<CustomField>
    <fullName>Assigned_From_Group__c</fullName>
    <description>Stores Group Id.</description>
    <label>Assigned From Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>