sfdx-source/force-app/main/default/objects/WorkOrder/fields/Associated_Account_Ids__c.field-meta.xml
<CustomField>
    <fullName>Associated_Account_Ids__c</fullName>
    <description>Store accounts with POS WorkOrder existing or to be created on this WorkOrder</description>
    <label>Associated Account Ids</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>