sfdx-source/force-app/main/default/objects/WorkOrder/fields/Bulk_Parent_Order_Key__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Parent_Order_Key__c</fullName>
    <description>LEM-15978: It is used to store the key (Bulk Reference Id + Request Type + Business Id) on Parent Work Order during Bulk Order Creation.</description>
    <label>Bulk Parent Order Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>