sfdx-source/force-app/main/default/objects/WorkOrder/fields/Bundled_with_Marketplace__c.field-meta.xml
<CustomField>
    <fullName>Bundled_with_Marketplace__c</fullName>
    <description>LEM-1874: It indicates whether Storefront product was sold with Marketplace product in the associated Contract. It also drives the logic for creating Storefront Bundled Work Plan.</description>
    <label>Bundled with Marketplace</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>