sfdx-source/force-app/main/default/objects/WorkOrder/fields/Business_Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Business_Account_Country__c</fullName>
    <description>LEM-1113: It indicates the country code of Business Account.</description>
    <formula>IF(
  Account.RecordType.Name == $Label.BusinessAccountRecordTypeName,
  TEXT(Account.BillingCountryCode),
  IF(
    Account.ParentId != null,
    TEXT(Account.Parent.BillingCountryCode),
    TEXT(Account.BillingCountryCode)
  )
)</formula>
    <label>Business Account Country</label>
    <type>Text</type>
</CustomField>