sfdx-source/force-app/main/default/objects/WorkOrder/fields/Business_Id__c.field-meta.xml
<CustomField>
    <fullName>Business_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15213: It specifies the Business Id(External_Id_Source__c) of the existing Business Reference.</description>
    <inlineHelpText>[SMB ONLY] If you are adding new stores to an existing business please specify the Business Id of the existing business here.</inlineHelpText>
    <label>Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>