sfdx-source/force-app/main/default/objects/WorkOrder/fields/Business_to_Store_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Business_to_Store_Assignment__c</fullName>
    <label>Provisioning Process</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Automatic</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>