sfdx-source/force-app/main/default/objects/WorkOrder/fields/COO_Graveyard_Business_Id__c.field-meta.xml
<CustomField>
    <fullName>COO_Graveyard_Business_Id__c</fullName>
    <description>LEM-3373 The Graveyard Business Id that should be used for a Change of Ownership(COO)</description>
    <label>COO Graveyard Business Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>