sfdx-source/force-app/main/default/objects/WorkOrder/fields/Create_Record_Action__c.field-meta.xml
<CustomField>
    <fullName>Create_Record_Action__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-14097: It is used to switch record action capabilities.</description>
    <label>Create Record Action</label>
    <type>Checkbox</type>
</CustomField>