sfdx-source/force-app/main/default/objects/WorkOrder/fields/Creation_Source__c.field-meta.xml
<CustomField>
    <fullName>Creation_Source__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-2946,LEM-25654: Creation Source is used to identify where a Work Order and children Work Orders were created from. In some instances, it can bypass readiness checks, disable provisioning status notifications, set parent or child Creation Sources, set Proposed Dated of Activation/Tablet/Menu on children, create Work Plans for Storefront, create Work Orders for Tablet/Marketing Kit/Photoshoot, set addresses on Work Orders, and associate stores.</description>
    <inlineHelpText>Used to identify where a Work Order and children Work Orders were created from, as well as bypass, disable, set dates, set addresses, etc. depending on the Creation Source selected.</inlineHelpText>
    <label>Creation Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manage Stores</fullName>
            </value>
            <value>
                <fullName>Add Stores</fullName>
            </value>
            <value>
                <fullName>Nintex</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
                <default>true</default>
                <label>Manual</label>
            </value>
            <value>
                <fullName>Guided Flow</fullName>
            </value>
            <value>
                <fullName>Manage Pricing</fullName>
            </value>
            <value>
                <fullName>SSOB</fullName>
            </value>
            <value>
                <fullName>SSMO</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Onboarding Inputs</fullName>
            </value>
            <value>
                <fullName>Place It For Me</fullName>
            </value>
            <value>
                <fullName>RESSMO</fullName>
            </value>
            <value>
                <fullName>Mx Portal</fullName>
            </value>
            <value>
                <fullName>Bulk Request</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>