sfdx-source/force-app/main/default/objects/WorkOrder/fields/Decision_Maker__c.field-meta.xml
<CustomField>
    <fullName>Decision_Maker__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LEM-813: Decision maker linked to the onboarding event.</description>
    <inlineHelpText>Decision maker linked to the onboarding event</inlineHelpText>
    <label>Decision Maker</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Work Orders</relationshipLabel>
    <relationshipName>Work_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>