sfdx-source/force-app/main/default/objects/WorkOrder/fields/Email_Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Email_Reference_Id__c</fullName>
    <description>LEM-3548: It generates a unique reference Id used for identifying Work Orders from inbound emails through the corresponding subject.</description>
    <formula>&apos;ref:&apos; &amp; LEFT($Organization.Id, 4) &amp; RIGHT($Organization.Id, 4) &amp; &apos;.&apos; &amp; LEFT(Id, 4) &amp; RIGHT(Id, 5) &amp; &apos;:ref&apos;</formula>
    <label>Email Reference Id</label>
    <type>Text</type>
</CustomField>