sfdx-source/force-app/main/default/objects/WorkOrder/fields/Estimated_Number_Of_Stores__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Number_Of_Stores__c</fullName>
    <description>LEM-813: Estimated number of stores to be onboarded as part of the work order.</description>
    <inlineHelpText>Estimated number of stores to be onboarded as part of the work order</inlineHelpText>
    <label>Estimated Number Of Stores</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>