sfdx-source/force-app/main/default/objects/WorkOrder/fields/Execute_Readiness_Check__c.field-meta.xml
<CustomField>
    <fullName>Execute_Readiness_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-10479: It is updated by Data Operations team through data scripts to trigger Readiness Check on the work orders as needed.</description>
    <label>Execute Readiness Check</label>
    <type>Checkbox</type>
</CustomField>