sfdx-source/force-app/main/default/objects/WorkOrder/fields/Experience__c.field-meta.xml
<CustomField>
    <fullName>Experience__c</fullName>
    <description>LEM-13590: It is used to link the Experience on Account linked to the onboarding event.</description>
    <formula>IF
(
    INCLUDES
        (
            Account.Experience__c , &apos;DoorDash&apos;
        ),
        $Label.DoorDashExperience + $Label.Semicolon,
        null
) &amp;
IF
(
    INCLUDES
        (
            Account.Experience__c , &apos;Caviar&apos;
        ),
        $Label.CaviarExperience + $Label.Semicolon,
        null
) &amp;
IF
(
    INCLUDES
        (
            Account.Experience__c , &apos;Storefront&apos;
        ),
        $Label.WorkOrderTypeStorefront + $Label.Semicolon,
        null
) &amp;
IF
(
    INCLUDES
        (
            Account.Experience__c , &apos;Drive&apos;
        ),
        $Label.WorkOrderTypeDrive + $Label.Semicolon,
        null
) &amp;
IF
(
    INCLUDES
        (
            Account.Experience__c , &apos;Voice&apos;
        ),
        $Label.VoiceExperience + $Label.Semicolon,
        null
    )</formula>
    <label>Experience</label>
    <type>Text</type>
</CustomField>