sfdx-source/force-app/main/default/objects/WorkOrder/fields/Google_Sheet_URL__c.field-meta.xml
<CustomField>
    <fullName>Google_Sheet_URL__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>Indicates link to google sheet that contains store information.</description>
    <inlineHelpText>Link to google sheet that contains store information. Ensure that the document has the store id, location id and provider type columns populated</inlineHelpText>
    <label>Google Sheet URL</label>
    <type>Url</type>
</CustomField>