sfdx-source/force-app/main/default/objects/WorkOrder/fields/Has_Any_Store_Tablet_Shipment_Delayed__c.field-meta.xml
<CustomField>
    <fullName>Has_Any_Store_Tablet_Shipment_Delayed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3968: It indicates whether parent Work Order has a store Account with Delay_Tablet_Shipment__c as &apos;Yes&apos;.</description>
    <label>Has Any Store Tablet Shipment Delayed?</label>
    <type>Checkbox</type>
</CustomField>