sfdx-source/force-app/main/default/objects/WorkOrder/fields/HasCatalogWorkPlan__c.field-meta.xml
<CustomField>
    <fullName>HasCatalogWorkPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3493: It indicates whether parent Work Order is eligible for Catalog Work Plan whenever store Accounts associated with child Work Orders has Menu UI Type as ‘Retail’.</description>
    <label>HasCatalogChildWorkPlans</label>
    <type>Checkbox</type>
</CustomField>