sfdx-source/force-app/main/default/objects/WorkOrder/fields/HasMenuWorkPlan__c.field-meta.xml
<CustomField>
    <fullName>HasMenuWorkPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3493: It indicates whether parent Work Order is eligible for Menu Work Plan whenever store Accounts associated with child Work Orders has Menu UI Type as ‘Restaurant’.</description>
    <label>HasMenuChildWorkPlans</label>
    <type>Checkbox</type>
</CustomField>