sfdx-source/force-app/main/default/objects/WorkOrder/fields/HasPOSWorkPlan__c.field-meta.xml
<CustomField>
    <fullName>HasPOSWorkPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1874: It indicates whether parent Work Order is eligible for POS Work Plan whenever child Work Orders are attached with store Account not having POS Integration Type as &quot;non_integrated_mx&quot;.</description>
    <label>HasPOSChildWorkPlans</label>
    <type>Checkbox</type>
</CustomField>