sfdx-source/force-app/main/default/objects/WorkOrder/fields/HasTabletCredentialsGenerated__c.field-meta.xml
<CustomField>
    <fullName>HasTabletCredentialsGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-4386: It indicates whether Tablet credentials generated on the associated store Account.</description>
    <label>HasTabletCredentialsGenerated</label>
    <type>Checkbox</type>
</CustomField>