sfdx-source/force-app/main/default/objects/WorkOrder/fields/HasTabletWorkPlan__c.field-meta.xml
<CustomField>
    <fullName>HasTabletWorkPlan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1874: It indicates whether parent Work Order is eligible for Tablet Work Plan whenever child Work Orders are attached with store Account having Tablet Delivery Method as &quot;Drop-ship&quot;.</description>
    <label>HasTabletChildWorkPlans</label>
    <type>Checkbox</type>
</CustomField>