sfdx-source/force-app/main/default/objects/WorkOrder/fields/HasWorkPlansGenerated__c.field-meta.xml
<CustomField>
    <fullName>HasWorkPlansGenerated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-1956: It indicates whether Work Plans are generated on parent Work Order.</description>
    <label>HasWorkPlansGenerated</label>
    <type>Checkbox</type>
</CustomField>