sfdx-source/force-app/main/default/objects/WorkOrder/fields/Integration_Request_Id__c.field-meta.xml
<CustomField>
    <fullName>Integration_Request_Id__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-15585: It stores the Id of the Integration Request record which triggered the Work Order creation.</description>
    <label>Integration Request Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>