sfdx-source/force-app/main/default/objects/WorkOrder/fields/Integration_Request_Ids__c.field-meta.xml
<CustomField>
    <fullName>Integration_Request_Ids__c</fullName>
    <label>Integration Request Ids</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>