sfdx-source/force-app/main/default/objects/WorkOrder/fields/Is_Eligible_for_Ads_Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_for_Ads_Work_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13559: It is used as an indicator for Ads Work Plan Creation.</description>
    <label>Is Eligible for Ads Work Plan ?</label>
    <type>Checkbox</type>
</CustomField>