sfdx-source/force-app/main/default/objects/WorkOrder/fields/Is_Eligible_for_Promos_Work_Plan__c.field-meta.xml
<CustomField>
    <fullName>Is_Eligible_for_Promos_Work_Plan__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-13559: It is used as indicator for Promos Work Plan creation.</description>
    <label>Is Eligible for Promos Work Plan ?</label>
    <type>Checkbox</type>
</CustomField>