sfdx-source/force-app/main/default/objects/WorkOrder/fields/Is_PDOA_PDOM_Same_for_All_Stores__c.field-meta.xml
<CustomField>
    <fullName>Is_PDOA_PDOM_Same_for_All_Stores__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-5126 : The fiels is set by code:, True if PDOx of all Child accounts are same, False if if PDOx of all Child accounts are not the same</description>
    <label>Is PDOA/PDOM Same for All Stores?</label>
    <type>Checkbox</type>
</CustomField>