sfdx-source/force-app/main/default/objects/WorkOrder/fields/Is_PDOA_PDOM_Same_for_All_Stores_Flag__c.field-meta.xml
<CustomField>
    <fullName>Is_PDOA_PDOM_Same_for_All_Stores_Flag__c</fullName>
    <description>LEM-5126: It is used to indicate whether the parent work order PDOx fields matches with the store level PDOx fields</description>
    <formula>IF(NOT(Is_PDOA_PDOM_Same_for_All_Stores__c), IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;red&quot;, 15, 15 ), IMAGE ( &quot;/img/samples/flag_green.gif&quot;, &quot;green&quot;, 15 , 15 ))</formula>
    <label>Is PDOA/PDOM Same for All Stores?</label>
    <type>Text</type>
</CustomField>