sfdx-source/force-app/main/default/objects/WorkOrder/fields/Is_Updated_By_System__c.field-meta.xml
<CustomField>
    <fullName>Is_Updated_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-4205: It is used to identify whether Work Order is updated through UI or by system. It prevents changing status to &apos;Dead&apos; on parent Work Order with Work Plans and Work Steps.</description>
    <label>Is Updated By System</label>
    <type>Checkbox</type>
</CustomField>