sfdx-source/force-app/main/default/objects/WorkOrder/fields/IsStoresAssociationInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsStoresAssociationInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <description>LEM-3711: It is used to check whether the stores association is in progress for parent Work Order in order to display the banner message.</description>
    <label>IsStoreAssociationInProgress</label>
    <type>Checkbox</type>
</CustomField>