sfdx-source/force-app/main/default/objects/WorkOrder/fields/Last_Updated_By_MINT__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated_By_MINT__c</fullName>
    <description>This field indicates the value when does this last updated by MINT User / Last Synced back from MINT (MuleSoft User)</description>
    <label>Last Updated By MINT</label>
    <type>DateTime</type>
</CustomField>