sfdx-source/force-app/main/default/objects/WorkOrder/fields/Legal_Business_Name_Store__c.field-meta.xml
<CustomField>
    <fullName>Legal_Business_Name_Store__c</fullName>
    <description>LEM-3184: It is used to display store Account&apos;s Legal Business Name in the &apos;Banking Details&apos; section of the onboarding details on Work Plan.</description>
    <formula>Account.Legal_Business_Name__c</formula>
    <inlineHelpText>Represents the legal business name</inlineHelpText>
    <label>Legal Business Name (Store)</label>
    <type>Text</type>
</CustomField>