sfdx-source/force-app/main/default/objects/WorkOrder/fields/Matched_By__c.field-meta.xml
<CustomField>
    <fullName>Matched_By__c</fullName>
    <description>LEM-4338: It indicates the criteria for associating child Work Order with a parent Work Order.</description>
    <label>Matched By</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Contract</fullName>
            </value>
            <value>
                <fullName>PDOA</fullName>
            </value>
            <value>
                <fullName>Nintex Id</fullName>
            </value>
            <value>
                <fullName>Type</fullName>
            </value>
            <value>
                <fullName>Onboarding Link</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>