sfdx-source/force-app/main/default/objects/WorkOrder/fields/Menu_Date_to_Revert_Changes__c.field-meta.xml
<CustomField>
    <fullName>Menu_Date_to_Revert_Changes__c</fullName>
    <description>LEM-1683: It indicates when we have limited time offers that need to be pulled from the menu on a certain date.</description>
    <label>Menu Date to Revert Changes</label>
    <type>Date</type>
</CustomField>