sfdx-source/force-app/main/default/objects/WorkOrder/fields/Menu_Date_to_Revert_Changes_On_Parent__c.field-meta.xml
<CustomField>
    <fullName>Menu_Date_to_Revert_Changes_On_Parent__c</fullName>
    <description>LEM-3164: It is used to display parent Work Order&apos;s &apos;Menu Date to Revert Changes&apos; in the menu details section of the onboarding details.</description>
    <formula>ParentWorkOrder.Menu_Date_to_Revert_Changes__c</formula>
    <label>Menu Date to Revert Changes</label>
    <type>Date</type>
</CustomField>