sfdx-source/force-app/main/default/objects/WorkOrder/fields/Menu_Preview_Link__c.field-meta.xml
<CustomField>
    <fullName>Menu_Preview_Link__c</fullName>
    <complianceGroup>GDPR</complianceGroup>
    <description>LEM-13504: It used to store the menu preview link from the Photoshoot Guided flow. LEM-16545: Changed the data type to LongTextArea(1000 characters) for allowing the URL with length more than 255 characters.</description>
    <label>Menu Preview Link</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>