sfdx-source/force-app/main/default/objects/WorkOrder/fields/MINT_Store_Page__c.field-meta.xml
<CustomField>
    <fullName>MINT_Store_Page__c</fullName>
    <description>LEM-9934: Store Id with link to the MINT Store page for Marketplace.</description>
    <formula>IF(
  AND(
    NOT(TEXT(Type__c) = $Label.WorkOrderTypeDrive),
    NOT(ISBLANK(Store_Id__c))
  ),
  HYPERLINK(
    $CustomMetadata.Static_Configurations__mdt.MINT_Store_Page_URL.Configuration_Value__c + Store_Id__c,
    Store_Id__c,
    &quot;_blank&quot;
  ),
  null
)</formula>
    <label>MINT Store Page</label>
    <type>Text</type>
</CustomField>