sfdx-source/force-app/main/default/objects/WorkOrder/fields/MINT_Updates__c.field-meta.xml
<CustomField>
    <fullName>MINT_Updates__c</fullName>
    <formula>IF(
TODAY() - DATEVALUE( Last_Updated_By_MINT__c )&lt;7, 
TRUE,
FALSE
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MINT Updates</label>
    <type>Checkbox</type>
</CustomField>